--- a/source/tms/css/animate.css
+++ b/source/tms/css/animate.css
@@ -14,8 +14,8 @@ Copyright (c) 2013 Daniel Eden
   -moz-animation-duration: 1s;
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
-   -ms-animation-fill-mode: both;
-   -o-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
   -moz-animation-fill-mode: both;
   animation-fill-mode: both;
 }
@@ -38,22 +38,39 @@ Copyright (c) 2013 Daniel Eden
 
 @-webkit-keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
-	-webkit-transform: translateY(0);
-	-ms- transform: translateY(0);
-	-o- transform: translateY(0);
-	-moz- transform: translateY(0);
-	transform: translateY(0);
-}
-
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
   40% {
     -webkit-transform: translateY(-30px);
-	-moz-transform: translateY(-30px);
+    -moz-transform: translateY(-30px);
     transform: translateY(-30px);
   }
-
   60% {
     -webkit-transform: translateY(-15px);
-	-moz-transform: translateY(-15px);
+    -moz-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -moz-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
     transform: translateY(-15px);
   }
 }
